test-cases/final-dump/generic_resource.exp
Error detected during preliminary processing of module generic_resource
[91mfinal-dump/generic_resource.wybe:1:1: Resource type cannot contain type variables: list(?foo)
[0m
